--- a/teste.html
+++ b/teste.html
@@ -1,5 +1,5 @@
 <h1>Olá, eu sou um grande cabeçalho!</h1>
 <p>
-    Olá, eu sou um singelo parágrafo.
+    Olá, eu sou um singelo <b>parágrafo</b>.
 </p>
 <a href="http://www.google.com" target="_blank">Leva-me ao Google</a>
