--- a/teste.html
+++ b/teste.html
@@ -3,3 +3,4 @@
     Olá, eu sou um singelo <b>parágrafo</b>.
 </p>
 <a href="http://www.google.com" target="_blank">Leva-me ao Google</a>
+<img src="images/the-last-of-us.jpg">
