--- a/teste.html
+++ b/teste.html
@@ -1,6 +1,17 @@
-<h1>Olá, eu sou um grande, muito grande cabeçalho!</h1>
-<p>
-    Olá, eu sou um singelo <b>parágrafo</b>.
-</p>
-<a href="http://www.google.com" target="_blank">Leva-me ao Google</a>
-<img src="images/the-last-of-us.jpg">
+<!DOCTYPE html>
+<html>
+    <head>
+
+    </head>
+    <body>
+        
+        <h1>Olá, eu sou um grande, muito grande cabeçalho!</h1>
+        <p>
+            Olá, eu sou um singelo <b>parágrafo</b>.
+        </p>
+        <a href="http://www.google.com" target="_blank">Leva-me ao Google</a>
+        <img src="images/the-last-of-us.jpg">
+
+    </body>
+
+</html>
