--- a/teste.html
+++ b/teste.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         
-        <h1>Olá, eu sou um grande, muito grande cabeçalho!</h1>
+        <h1 style="font-size: 100px; background-color: blue; height: 500px; text-align: center; text-transform: uppercase;">Olá, eu sou um grande, muito grande cabeçalho!</h1>
         <p>
             Olá, eu sou um singelo <b>parágrafo</b>.
         </p>
