--- a/styles.html
+++ b/styles.html
@@ -5,7 +5,11 @@
         <style type="text/css">
             h1{
                 font-size: 30px;
-                color: darksalmon;
+                color: #E91E63;
+            }
+            h2{
+                font-size: 20px;
+                color: red;
             }
         </style>
     </head>
@@ -14,10 +18,10 @@
         <h1>Cabeçalho 1 - 2</h1>
         <h1>Cabeçalho 1 - 3</h1>
         <h1>Cabeçalho 1 - 4</h1>
-        <h2 style="font-size: 30px; color: lightcoral;">Cabeçalho 2 - 1</h2>
-        <h2 style="font-size: 30px; color: lightcoral;">Cabeçalho 2 - 2</h2>
-        <h2 style="font-size: 30px; color: lightcoral;">Cabeçalho 2 - 3</h2>
-        <h2 style="font-size: 30px; color: lightcoral;">Cabeçalho 2 - 4</h2>
+        <h2>Cabeçalho 2 - 1</h2>
+        <h2>Cabeçalho 2 - 2</h2>
+        <h2>Cabeçalho 2 - 3</h2>
+        <h2>Cabeçalho 2 - 4</h2>
     </body>
 
 </html>
