--- a/styles.html
+++ b/styles.html
@@ -2,24 +2,16 @@
 <html>
     <head>
         <title>Exemplos de CSS</title>
-        <style type="text/css">
-            h1{
-                font-size: 30px;
-                color: #E91E63;
-            }
-            h2{
-                font-size: 20px;
-                color: red;
-            }
-        </style>
+        <link rel="stylesheet" href="css/styles.css" type="text/css">
     </head>
     <body>
-        <h1>Cabeçalho 1 - 1</h1>
-        <h1>Cabeçalho 1 - 2</h1>
+        <span>"Eu sou um rapazinho, ..."</span>
+        <h1 class="maiuscula"><span>Cabeçalho</span> 1 - 1</h1>
+        <h1 class="grande">Cabeçalho 1 - 2</h1>
         <h1>Cabeçalho 1 - 3</h1>
-        <h1>Cabeçalho 1 - 4</h1>
+        <h1 class="grande maiuscula">Cabeçalho 1 - 4</h1>
         <h2>Cabeçalho 2 - 1</h2>
-        <h2>Cabeçalho 2 - 2</h2>
+        <h2 class="grande"><span>Cabeçalho</span> 2 - 2</h2>
         <h2>Cabeçalho 2 - 3</h2>
         <h2>Cabeçalho 2 - 4</h2>
     </body>
