Video Aula 2 Finalizado

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
     <head>
         <title> Esta é... a Dani Clayton</title>
+        <link href = "https://fonts.googleapis.com/css2? family = Palanquin & display = swap" rel = "stylesheet">
+        <link rel="stylesheet" type="text/css" href="css/dani.css">
     </head>
     <body>
         <header>
@@ -10,11 +12,11 @@
         </header>
         <main>
             <h2>Sobre</h2>
-            <p>Danielle "Dani" Clayton é uma personagem importante em The Haunting Of Bly Manor. Ela é uma professora americana que se mudou para Londres e atual governanta de Bly Manor.
+            <p>Danielle (ou "Dani") Clayton é uma personagem importante em The Haunting Of Bly Manor. Ela é uma professora americana que se mudou para Londres e atual governanta de Bly Manor.
                 <br> Por extensão, ela é a pseudo-mãe e professora das crianças Wingrave, Miles e Flora.
             </p>
-            <img src="images/Dan_Jamie_Gif.gif">
-            <p>Pedido de Casamento</p>
+            <img src="images/Dani_Jamie_2.jpg">
+            <p>Dani e Jamie na estufa</p>
             <h2>Traços</h2>
             <ol>
                 <li>Corajosa</li>
@@ -25,12 +27,17 @@
             <h2>Relacionamentos</h2>
             <p>O seu tempo na Bly Manor foi suficiente para criar relações fortes com as crianças e trabalhadores da mansão. Cada personagem revela características fortes e um papel importante no desenrolar da história, não só de Bly Manor, como de Danielle. São estas:</p>
             <ul>
-                <li><a href="">Jamie</a></li>
-                <li>Miles</li>
-                <li>Flora</li>
-                <li>Hannah</li>
-                <li>Owen</li>
+                <li><a href="https://the-haunting.fandom.com/wiki/Jamie" target="_blank">Jamie</a></li>
+                <li><a href="https://the-haunting.fandom.com/wiki/Miles_Wingrave" target="_blank">Miles</a></li>
+                <li><a href="https://the-haunting.fandom.com/wiki/Flora_Wingrave" target="_blank">Flora</a></li>
+                <li><a href="https://the-haunting.fandom.com/wiki/Hannah_Grose" target="_blank">Hannah</a></li>
+                <li><a href="https://the-haunting.fandom.com/wiki/Owen_Sharma" target="_blank">Owen</a></li>
             </ul>
         </main>
     </body>
+    <footer>
+        <p>
+            Trabalho no âmbito da disciplina de Programação II - Licenciatura em Multimédia &copy; 2020
+        </p>
+    </footer>
 </html>
