FINAL Aula2 PaginaDani

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <br> Por extensão, ela é a pseudo-mãe e professora das crianças Wingrave, Miles e Flora.
             </p>
             <img src="images/Dani_Jamie_2.jpg">
-            <p>Dani e Jamie na estufa</p>
+            <p class="caption">Dani e Jamie na estufa</p>
             <h2>Traços</h2>
             <ol>
                 <li>Corajosa</li>
